@@ -7,6 +7,7 @@ Overview of changes in lightdm 0.3.1
     * Fix crash when load-users is false in UserManager
     * Fix up name of .vapi file so it can be used directly from valac
     * Tidy up Qt library and greeter
+    * Move menubar in greeters to top of screen
 
 Overview of changes in lightdm 0.3.0
 
